# cmake_study

./: .gitignore  README.md
cmake_test/: CMakeLists.txt  foo.cc  main.cc
cmake_test2/: CMakeLists.txt
cmake_test2/lib/: CMakeLists.txt  shape.cc
cmake_test3/: CMakeLists.txt  url.txt
cmake_test3/lib/: CMakeLists.txt  shape.cc
cmake_test4/: CMakeLists.txt  build.sh  cat_ldd.sh  cat_link.sh  main.cc
cmake_test4/build_interface/: CMakeCache.txt  program
cmake_test4/build_interface/lib/: Makefile  libshape.so.objdump
cmake_test4/build_so/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_test4/build_so/lib/: libshape.so.objdump
cmake_test4/lib/: CMakeLists.txt  shape.cc
make_test/: Makefile  main  url.txt
make_test/src/: foo.cc
shared_lib/: Makefile  main  main.cc
shared_lib/lib/: Makefile
shared_lib/lib/include/: bar.h
shared_lib/lib/src/: bar.cc
static_bin_test/: CMakeLists.txt  README.md
static_bin_test/includes/: shape.h
static_bin_test/lib/: CMakeLists.txt  shape.cc
static_lib/: Makefile  main  main.cc
static_lib/lib/: Makefile
static_lib/lib/include/: foo.h
static_lib/lib/src/: foo.cc
static_shared_lib/: Makefile  main
static_shared_lib/lib/: Makefile
